edit still to fix also with table changes
